fix: first component spacing

--- a/assets/styles/body.sass
+++ b/assets/styles/body.sass
@@ -7,6 +7,8 @@ section
   padding-left: var(--spacing-sides)
   padding-right: var(--spacing-sides)
   // border: 1px solid hsl(360, 100, 50)
+  &:first-child
+    margin-top: var(--spacing-six)
   &:first-child.landingItem
     margin-top: 0
   &:first-child.landingSlider
