--- a/assets/styles/variables.sass
+++ b/assets/styles/variables.sass
@@ -21,6 +21,7 @@ body
   --spacing-three: 32px
   --spacing-four: 64px
   --spacing-five: 128px
+  --spacing-six: 256px
   --spacing-sides: 32px
   @media screen and ( max-width: $content-container)
     --spacing-one: 0.875vmin
@@ -28,4 +29,5 @@ body
     --spacing-three: 3.5vmin
     --spacing-four: 7vmin
     --spacing-five: 14vmin
+    --spacing-six: 28vmin
     --spacing-sides: 7vmin
